switch API uses